2007-11-09:
	* src/auth.c: fetch tokens when "tokens" is enabled and we're not
	configured to use krb4, instead of not doing anything like that

2007-11-08:
	* src/stash.c: if we're about to create a ccache with a name identical
	to one which we've already created (and haven't since destroyed), try
	to make the name unique by appending a "_" to it (mainly for keyrings).
	When creating a temporary FILE: ccache, use mkstemp() to generate the
	file so that mkstemp patterns don't get used literally.  When removing
	a ccache, treat EKEYREVOKED when resolving the ccache as a successful
	result.
	* src/*.c: when printing UIDs and GIDs, case to "unsigned long long"
	if available.
	* src/auth.c,src/acct.c,src/session.c: skip "minimum_uid" checks when
	"no_user_check" was given, in which case we can't know the user's UID.
	* configure.ac: fix some of the help text. make use of keyutils
	something we can issue an error for if the library isn't detected,
	if the user explicitly requests it.
	* src/stash.c(_pam_krb5_read_keyring): add a level of indirection to
	avoid a type-safety warning.

2007-11-05:
	* src/stash.c(_pam_krb5_stash_chown_keyring): add, to make sure that
	keyrings we create for the user can actually be modified by the user
	after the session is opened (spotted by Michael Calmer)

2007-10-31:
	* src/sly.c(_pam_krb5_sly_maybe_refresh): note that we stored creds
	when we do so for non-FILE ccaches, so that we don't forget to fetch
	new tokens if we need to do so.

2007-10-26:
	* src/sly.c(sly_v5): only free the ccache principal name if the call
	to retrieve it succeeded.
	* src/sly.c(_pam_krb5_sly_maybe_refresh): debug log when we decide
	to do things.  Don't bother trying to refresh an unset KRB5CCNAME.
	* src/shmem.c: correctly check the value returned of shmat() in
	the place where it was being done wrong.
	* src/v5.c: change internally-used ccaches from FILE: to MEMORY:

2007-10-26:
	* src/stash.c(_pam_krb5_stash_cc_copy): don't nuke the new ccache