@@ -253,7 +253,8 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 			}
 			if (stash->v4present &&
 			    (options->ignore_afs == 0) &&
-			    (options->tokens == 1)) {
+			    (options->tokens == 1) &&
+			    tokens_useful()) {
 				v5_save_for_tokens(ctx, stash, user, userinfo,
 						   options, NULL);
 				v4_save_for_tokens(ctx, stash, userinfo,
@@ -265,7 +266,8 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 		} else {
 			if ((retval == PAM_SUCCESS) &&
 			    (options->ignore_afs == 0) &&
-			    (options->tokens == 1)) {
+			    (options->tokens == 1) &&
+			    tokens_useful()) {
 				v5_save_for_tokens(ctx, stash, user, userinfo,
 						   options, NULL);
 				tokens_obtain(ctx, stash, options, userinfo, 1);
@@ -337,7 +339,8 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 			}
 			if (stash->v4present &&
 			    (options->ignore_afs == 0) &&
-			    (options->tokens == 1)) {
+			    (options->tokens == 1) &&
+			    tokens_useful()) {
 				v5_save_for_tokens(ctx, stash, user, userinfo,
 						   options, NULL);
 				v4_save_for_tokens(ctx, stash, userinfo,
@@ -349,7 +352,8 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 		} else {
 			if ((retval == PAM_SUCCESS) &&
 			    (options->ignore_afs == 0) &&
-			    (options->tokens == 1)) {
+			    (options->tokens == 1) &&
+			    tokens_useful()) {
 				v5_save_for_tokens(ctx, stash, user, userinfo,
 						   options, NULL);
 				tokens_obtain(ctx, stash, options, userinfo, 1);
@@ -390,7 +394,8 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 			}
 			if (stash->v4present &&
 			    (options->ignore_afs == 0) &&
-			    (options->tokens == 1)) {
+			    (options->tokens == 1) &&
+			    tokens_useful()) {
 				v5_save_for_tokens(ctx, stash, user, userinfo,
 						   options, NULL);
 				v4_save_for_tokens(ctx, stash, userinfo,
@@ -402,7 +407,8 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 		} else {
 			if ((retval == PAM_SUCCESS) &&
 			    (options->ignore_afs == 0) &&
-			    (options->tokens == 1)) {
+			    (options->tokens == 1) &&
+			    tokens_useful()) {
 				v5_save_for_tokens(ctx, stash, user, userinfo,
 						   options, NULL);
 				tokens_obtain(ctx, stash, options, userinfo, 1);
@@ -413,11 +419,35 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 
 	/* If we got this far, check the target user's .k5login file. */
 	if ((retval == PAM_SUCCESS) && options->user_check) {
+		if ((options->tokens != 1) &&
+		    (options->ignore_afs == 0) &&
+		    tokens_useful()) {
+			v5_save_for_tokens(ctx, stash, user, userinfo,
+					   options, NULL);
+			if (stash->v4present) {
+				v4_save_for_tokens(ctx, stash, userinfo,
+						   options, NULL);
+			}
+			tokens_obtain(ctx, stash, options, userinfo, 1);
+		}
 		if (krb5_kuserok(ctx, userinfo->principal_name, user) == 0) {
 			notice("account checks fail for '%s': user disallowed "
 			       "by .k5login file for '%s'",
 			       userinfo->unparsed_name, user);
 			retval = PAM_PERM_DENIED;
+		} else {
+			if (options->debug) {
+				debug("'%s' passes .k5login check for '%s'",
+				      userinfo->unparsed_name, user);
+			}
+		}
+		if ((options->tokens != 1) &&
+		    (options->ignore_afs == 0) &&
+		    tokens_useful()) {
+			if (stash->v4present) {
+				v4_destroy(ctx, stash, options);
+			}
+			v5_destroy(ctx, stash, options);
 		}
 	}
 
